kubernetes/ingress/ingress-template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/protocol: https
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service.serversscheme: https
  name: frontend
spec:
  rules:
  - host: frontend.<mynamespace>.development.az.nxsas.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 443
        path: /
  tls:
  - hosts:
    - frontend.<mynamespace>.development.az.nxsas.com
    secretName: frontend-ingress
